using System.Linq;
using AElf.CSharp.Core;
using AElf.Sdk.CSharp;
using AElf.Types;
using Google.Protobuf;
using Google.Protobuf.WellKnownTypes;

namespace AElf.Contracts.Consensus.AEDPoS
{
    // ReSharper disable once InconsistentNaming
    public partial class AEDPoSContract
    {
        private BytesValue GetConsensusBlockExtraData(BytesValue input, bool isGeneratingTransactions = false)
        {
            var triggerInformation = new AElfConsensusTriggerInformation();
            triggerInformation.MergeFrom(input.Value);

            Assert(triggerInformation.Pubkey.Any(), "Invalid pubkey.");

            if (!TryToGetCurrentRoundInformation(out var currentRound))
            {
                Assert(false, "Failed to get current round information.");
            }

            var publicKeyBytes = triggerInformation.Pubkey;
            var pubkey = publicKeyBytes.ToHex();

            var information = new AElfConsensusHeaderInformation();
            switch (triggerInformation.Behaviour)
            {
                case AElfConsensusBehaviour.UpdateValue:
                    information = GetConsensusExtraDataToPublishOutValue(currentRound, pubkey,
                        triggerInformation);
                    if (!isGeneratingTransactions)
                    {
                        information.Round = information.Round.GetUpdateValueRound(pubkey);
                    }

                    break;

                case AElfConsensusBehaviour.TinyBlock:
                    information = GetConsensusExtraDataForTinyBlock(currentRound, pubkey,
                        triggerInformation);
                    break;

                case AElfConsensusBehaviour.NextRound:
                    information = GetConsensusExtraDataForNextRound(currentRound, pubkey,
                        triggerInformation);
                    break;

                case AElfConsensusBehaviour.NextTerm:
                    information = GetConsensusExtraDataForNextTerm(pubkey, triggerInformation);
                    break;
            }

            if (!isGeneratingTransactions)
            {
                information.Round.DeleteSecretSharingInformation();
            }

            return information.ToBytesValue();
        }

        private AElfConsensusHeaderInformation GetConsensusExtraDataToPublishOutValue(Round currentRound,
            string pubkey, AElfConsensusTriggerInformation triggerInformation)
        {
            currentRound.RealTimeMinersInformation[pubkey].ProducedTinyBlocks = currentRound
                .RealTimeMinersInformation[pubkey].ProducedTinyBlocks.Add(1);
            currentRound.RealTimeMinersInformation[pubkey].ProducedBlocks =
                currentRound.RealTimeMinersInformation[pubkey].ProducedBlocks.Add(1);
            currentRound.RealTimeMinersInformation[pubkey].ActualMiningTimes
                .Add(Context.CurrentBlockTime);

            Assert(triggerInformation.InValue != null, "In value should not be null.");

            var outValue = HashHelper.ComputeFrom(triggerInformation.InValue);
            var signature =
                HashHelper.ConcatAndCompute(outValue, triggerInformation.InValue); // Just initial signature value.
            var previousInValue = Hash.Empty; // Just initial previous in value.

            if (TryToGetPreviousRoundInformation(out var previousRound) && !IsFirstRoundOfCurrentTerm(out _))
            {
                if (triggerInformation.PreviousInValue != null &&
                    triggerInformation.PreviousInValue != Hash.Empty)
                {
                    Context.LogDebug(
                        () => $"Previous in value in trigger information: {triggerInformation.PreviousInValue}");
                    // Self check.
                    if (previousRound.RealTimeMinersInformation.ContainsKey(pubkey) &&
                        HashHelper.ComputeFrom(triggerInformation.PreviousInValue) !=
                        previousRound.RealTimeMinersInformation[pubkey].OutValue)
                    {
                        Context.LogDebug(() => "Failed to produce block at previous round?");
                        previousInValue = Hash.Empty;
                    }
                    else
                    {
                        previousInValue = triggerInformation.PreviousInValue;
                    }
                    signature = previousRound.CalculateSignature(triggerInformation.PreviousInValue);
                }
                else
                {
                    var fakePreviousInValue = HashHelper.ComputeFrom(pubkey.Append(Context.CurrentHeight.ToString()));
                    if (previousRound.RealTimeMinersInformation.ContainsKey(pubkey) && previousRound.RoundNumber != 1)
                    {
                        var appointedPreviousInValue = previousRound.RealTimeMinersInformation[pubkey].InValue;
                        if (appointedPreviousInValue != null)
                        {
                            fakePreviousInValue = appointedPreviousInValue;
                        }

                        Context.LogDebug(() => $"TEST:\n{previousRound.ToString(pubkey)}\nInValue: {fakePreviousInValue}");
                        signature = previousRound.CalculateSignature(fakePreviousInValue);
                    }
                    else
                    {
                        // This miner appears first time in current round, like as a replacement of evil miner.
                        signature = previousRound.CalculateSignature(fakePreviousInValue);
                    }
                }
            }

            var updatedRound = currentRound.ApplyNormalConsensusData(pubkey, previousInValue,
                outValue, signature);

            Context.LogDebug(
                () => $"Previous in value after ApplyNormalConsensusData: " +
                      $"{updatedRound.RealTimeMinersInformation[pubkey].PreviousInValue}");

            updatedRound.RealTimeMinersInformation[pubkey].ImpliedIrreversibleBlockHeight = Context.CurrentHeight;

            // Update secret pieces of latest in value.
            UpdateLatestSecretPieces(updatedRound, pubkey, triggerInformation);

            // To publish Out Value.
            return new AElfConsensusHeaderInformation
            {
                SenderPubkey = pubkey.ToByteString(),
                Round = updatedRound,
                Behaviour = triggerInformation.Behaviour
            };
        }

        private void UpdateLatestSecretPieces(Round updatedRound, string pubkey, AElfConsensusTriggerInformation triggerInformation)
        {
            foreach (var encryptedPiece in triggerInformation.EncryptedPieces)
            {
                updatedRound.RealTimeMinersInformation[pubkey].EncryptedPieces
                    .Add(encryptedPiece.Key, encryptedPiece.Value);
            }

            foreach (var decryptedPiece in triggerInformation.DecryptedPieces)
            {
                if (updatedRound.RealTimeMinersInformation.ContainsKey(decryptedPiece.Key))
                {
                    updatedRound.RealTimeMinersInformation[decryptedPiece.Key].DecryptedPieces[pubkey] =
                        decryptedPiece.Value;
                }
            }

            foreach (var revealedInValue in triggerInformation.RevealedInValues)
            {
                if (updatedRound.RealTimeMinersInformation.ContainsKey(revealedInValue.Key) &&
                    (updatedRound.RealTimeMinersInformation[revealedInValue.Key].PreviousInValue == Hash.Empty ||
                     updatedRound.RealTimeMinersInformation[revealedInValue.Key].PreviousInValue == null))
                {
                    updatedRound.RealTimeMinersInformation[revealedInValue.Key].PreviousInValue = revealedInValue.Value;
                }
            }
        }

        private AElfConsensusHeaderInformation GetConsensusExtraDataForTinyBlock(Round currentRound,
            string pubkey, AElfConsensusTriggerInformation triggerInformation)
        {
            currentRound.RealTimeMinersInformation[pubkey].ProducedTinyBlocks = currentRound
                .RealTimeMinersInformation[pubkey].ProducedTinyBlocks.Add(1);
            currentRound.RealTimeMinersInformation[pubkey].ProducedBlocks =
                currentRound.RealTimeMinersInformation[pubkey].ProducedBlocks.Add(1);
            currentRound.RealTimeMinersInformation[pubkey].ActualMiningTimes
                .Add(Context.CurrentBlockTime);

            return new AElfConsensusHeaderInformation
            {
                SenderPubkey = pubkey.ToByteString(),
                Round = currentRound.GetTinyBlockRound(pubkey),
                Behaviour = triggerInformation.Behaviour
            };
        }

        private AElfConsensusHeaderInformation GetConsensusExtraDataForNextRound(Round currentRound,
            string pubkey, AElfConsensusTriggerInformation triggerInformation)
        {
            GenerateNextRoundInformation(currentRound, Context.CurrentBlockTime, out var nextRound);

            if (!nextRound.RealTimeMinersInformation.Keys.Contains(pubkey))
            {
                return new AElfConsensusHeaderInformation
                {
                    SenderPubkey = pubkey.ToByteString(),
                    Round = nextRound,
                    Behaviour = triggerInformation.Behaviour
                };
            }

            RevealSharedInValues(currentRound, pubkey);

            nextRound.RealTimeMinersInformation[pubkey].ProducedBlocks =
                nextRound.RealTimeMinersInformation[pubkey].ProducedBlocks.Add(1);
            Context.LogDebug(() => $"Mined blocks: {nextRound.GetMinedBlocks()}");
            nextRound.ExtraBlockProducerOfPreviousRound = pubkey;

            nextRound.RealTimeMinersInformation[pubkey].ProducedTinyBlocks = 1;
            nextRound.RealTimeMinersInformation[pubkey].ActualMiningTimes
                .Add(Context.CurrentBlockTime);

            return new AElfConsensusHeaderInformation
            {
                SenderPubkey = pubkey.ToByteString(),
                Round = nextRound,
                Behaviour = triggerInformation.Behaviour
            };
        }

        private AElfConsensusHeaderInformation GetConsensusExtraDataForNextTerm(string pubkey,
            AElfConsensusTriggerInformation triggerInformation)
        {
            var firstRoundOfNextTerm = GenerateFirstRoundOfNextTerm(pubkey, State.MiningInterval.Value);
            Assert(firstRoundOfNextTerm.RoundId != 0, "Failed to generate new round information.");
            if (firstRoundOfNextTerm.RealTimeMinersInformation.ContainsKey(pubkey))
            {
                firstRoundOfNextTerm.RealTimeMinersInformation[pubkey].ProducedTinyBlocks = 1;
            }

            return new AElfConsensusHeaderInformation
            {
                SenderPubkey = pubkey.ToByteString(),
                Round = firstRoundOfNextTerm,
                Behaviour = triggerInformation.Behaviour
            };
        }
    }
}